# knights-of-round-table

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  docker-compose.yml
.codex/: config.toml
docs/: Introduce to Skills.md  architecture-rules.md
docs/superpowers/specs/: 2026-05-19-kort-mvp-design.md
kort/: .gitignore  package.json  pnpm-lock.yaml
kort/apps/api/: Dockerfile  pyproject.toml
kort/apps/api/src/kort_api/: __init__.py  agents.py  app.py  config.py  conversations.py  model_client.py  orchestration.py  providers.py  request_router.py  schemas.py  storage.py
kort/apps/api/src/kort_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kort/apps/api/tests/: test_api.py
kort/apps/web/: Dockerfile  package.json  tailwind.config.ts
kort/apps/web/app/: globals.css  layout.tsx  locale.ts  page.tsx
kort/runtime/agents/: How To Make A Agent.md
kort/runtime/agents/creative-thinker/: agent.yaml
kort/runtime/agents/critic-main/: agent.yaml
kort/runtime/agents/logician-main/: agent.yaml
kort/runtime/agents/research-lead/: agent.yaml
kort/runtime/agents/summarizer-main/: agent.yaml
kort/runtime/agents/synthesizer-main/: agent.yaml
kort/runtime/providers/: profiles.json
kort/runtime/skills/evidence-grounding/: SKILL.md
kort/runtime/skills/final-answer-structure/: SKILL.md
kort/scripts/: dev-stop.mjs  dev-warmup.mjs
skills/critic/: SKILL.md
skills/expert/: SKILL.md
skills/summarizer/: SKILL.md
skills/synthesizer/: SKILL.md
tasks/: design.md  plan.md  product-polish-roadmap.md  todo.md  思考方式纠正.md
(+6 files in other folders)
